Use find by id in tests to avoid required session